[package]
name = "wroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cpal = { version = "0.15", features = ["jack", "asio"] }
crossbeam = "0.8"
crossterm = "0.26"
deref-derive = "0.1"
ringbuf = "0.3"
serde = { version = "1", features = ["derive"] }
tui = "0.19"
uuid = { version = "1.3", features = ["serde", "v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
gag = "1.0"
alsa-sys = "0.3"
